GCEvent can infer young or tenured sizing if the other is present